bk_ida/gccida/c1/walk_tree
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1569:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1579:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v17; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1585:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v23; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1606:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1607:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code[2]; // [rsp+20h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1650:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
if ( statement_code_p( ( tree_code)v13) && ( *( ( _BYTE *)*v9 + 19) & 4) == 0 ) 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1650:36: error: expected ')'
if ( statement_code_p( ( tree_code)v13) && ( *( ( _BYTE *)*v9 + 19) & 4) == 0 ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1650:22: note: to match this '('
if ( statement_code_p( ( tree_code)v13) && ( *( ( _BYTE *)*v9 + 19) & 4) == 0 ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1721:66: error: expected expression
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v9, &subtrees, v43, data, htab_); 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1721:54: error: use of undeclared identifier 'tree_node'
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v9, &subtrees, v43, data, htab_); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1721:10: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
result = lang_hooks_0.tree_inlining.walk_subtrees( ( tree_node **)v9, &subtrees, v43, data, htab_); 
         ^~~~~~~~~~~~
         lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1861:27: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v28 = statement_code_p( ( tree_code)v13); 
                          ^~~~~~~~~
                          tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1861:37: error: expected ')'
v28 = statement_code_p( ( tree_code)v13); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1861:23: note: to match this '('
v28 = statement_code_p( ( tree_code)v13); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1862:96: error: expected expression
if ( ( _DWORD)v13 == 2 || v28 || lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v9) ) 
                                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1862:85: error: use of undeclared identifier 'tree_node'
if ( ( _DWORD)v13 == 2 || v28 || lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v9) ) 
                                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/tree-inline.c:1862:34: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( ( _DWORD)v13 == 2 || v28 || lang_hooks_0.tree_inlining.tree_chain_matters_p( ( tree_node *)*v9) ) 
                                 ^~~~~~~~~~~~
                                 lang_hooks
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/walk_tree/src/obj/tree-inline.o] Error 1
